# ferrule

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
crates/cli/: Cargo.toml
crates/cli/src/: code_generation.rs  lib.rs  main.rs  output_documents.rs  payload.rs
crates/cli/tests/: code_generation.rs  diagnostics.rs  dynamic_document_outputs.rs  dynamic_sources.rs  edi_output.rs  external_source.rs  fixed_width.rs  flextext.rs  format_identity.rs  golden.rs  http_get.rs  idoc.rs  local_xml_file_set.rs  multiple_targets.rs  payload_execution.rs  pdf.rs  protobuf.rs  run_paths.rs  runtime_parameters.rs  swift.rs  xbrl.rs
crates/cli/tests/code_generation/: adjacency_tree.rs  aggregates.rs  collection_find.rs  copy_current_source.rs  extra_targets.rs  failure_rules.rs  generated_sequences.rs  grouping.rs  iteration_controls.rs  iteration_metadata.rs  joins.rs  lookups.rs  path_hierarchy.rs  recursive_sequences.rs  runtime_values.rs  scalar_algorithms.rs  scalar_functions.rs  sequence_reducers.rs  static_sources.rs  value_maps.rs
crates/cli/tests/fixtures/: expected_output.csv  input.csv  (+1 more)
crates/codegen/: Cargo.toml
crates/codegen-csharp/: Cargo.toml
crates/codegen-csharp/src/: error.rs  lib.rs  literal.rs  mapping.rs  runtime.rs
crates/codegen-csharp/tests/: collection_find_dotnet.rs  concatenate_dotnet.rs  correlated_join_dotnet.rs  dotnet.rs  grouping_dotnet.rs  join_dotnet.rs  recursive_filter_dotnet.rs  scalar_batch_c_dotnet.rs  xml_mixed_content_dotnet.rs  xml_serialize_dotnet.rs
crates/codegen-rust/: Cargo.toml
crates/codegen-rust/src/: failure.rs  lib.rs  tests.rs
crates/codegen/src/: artifact.rs  diagnostic.rs  join.rs  lib.rs  lower.rs  model.rs  tests.rs  validate.rs
crates/editor-ui/: Cargo.toml
crates/editor-ui/src/: command.rs  document.rs  lib.rs  selection.rs  snapshot_history.rs
crates/engine/: Cargo.toml
crates/engine/src/: adjacency_tree.rs  adjacency_tree_tests.rs  aggregate.rs  aggregate_tests.rs  collection_tests.rs  context.rs  core_tests.rs  dynamic_document_output_tests.rs  dynamic_source_tests.rs  dynamic_target.rs  dynamic_target_tests.rs  eval_expr.rs  eval_scope.rs  failure.rs  group_blocks_tests.rs  group_starting_tests.rs  grouping.rs  iteration_output.rs  iteration_output_tests.rs  join.rs  join_tests.rs  lib.rs  path_hierarchy.rs  path_hierarchy_tests.rs  recursive_filter.rs  resolve.rs  sequence.rs  sequence_exists_tests.rs  source_iteration.rs  trace.rs  user_function.rs  validate.rs  validate_join.rs
crates/format-csv/: Cargo.toml
crates/format-csv/src/: fixed_width.rs  lib.rs
crates/format-db/: Cargo.toml
crates/format-db/src/: lib.rs  relational.rs  relational_tests.rs
crates/format-edi/: Cargo.toml
crates/format-edi/src/: autocomplete.rs  config.rs  edifact.rs  hl7.rs  idoc.rs  lib.rs  segments.rs  swift.rs  tradacoms.rs  validation.rs  x12.rs
crates/format-flextext/: Cargo.toml
crates/format-flextext/src/: lib.rs  tests.rs
crates/format-json/: Cargo.toml
crates/format-json/src/: json_schema.rs  lib.rs
crates/format-pdf/: Cargo.toml
crates/format-pdf/src/: extract.rs  layout.rs  lib.rs
crates/format-xbrl/: Cargo.toml
crates/format-xbrl/src/: error.rs  lib.rs  render.rs  tests.rs
crates/format-xlsx/: Cargo.toml
crates/format-xlsx/src/: composite.rs  grid.rs  hierarchical.rs  lib.rs  update.rs  worksheet_set.rs
crates/format-xml/: Cargo.toml
crates/format-xml/src/: dtd.rs  file_set.rs  generic.rs  lib.rs  xsd.rs  xsd_tests.rs
crates/format-xml/tests/: mixed_content.rs  xsd_repeating_particles.rs
crates/functions/: Cargo.toml
crates/functions/src/: datetime.rs  datetime_add.rs  decimal.rs  filepath.rs  flextext.rs  format_number.rs  json.rs  lib.rs  scalar.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  app_canvas.rs  app_extra_sources.rs  app_new_mapping.rs  app_run.rs  app_scopes.rs  app_tests.rs  app_workspace.rs  appearance.rs  appearance_editor.rs  canvas.rs  canvas_endpoints.rs  canvas_keyboard.rs  canvas_layout.rs  canvas_minimap.rs  canvas_search.rs  diagnostics.rs  document.rs  extra_sources.rs  graph_references.rs  graph_sequence.rs  graph_viewer.rs  graph_viewer_endpoint_tests.rs  graph_viewer_tests.rs  icons.rs  layout_store.rs  main.rs  new_mapping.rs  node_palette.rs  path_picker.rs  preferences.rs  run_report.rs  schema_tree.rs  scope_editor.rs  theme.rs  value_editor.rs  wire_colors.rs  workspace_layout.rs  x12_tooltips.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs
crates/mapping/: Cargo.toml
crates/mapping/src/: adjacency.rs  edi.rs  external_source.rs  fixed_width.rs  flextext.rs  http.rs  idoc.rs  iteration.rs  lib.rs  path_hierarchy.rs  pdf.rs  pdf_tests.rs  protobuf.rs  reachable.rs  recursive.rs  scope_serde.rs  swift.rs  tabular.rs  wsdl.rs  xbrl.rs  xlsx_output.rs
crates/mfd/: Cargo.toml
crates/mfd/src/: canonical_function.rs  export.rs  import.rs  lib.rs  resource.rs
crates/mfd/tests/: adjacency_tree_udf.rs  aggregate_record_udf.rs  anchored_aggregate.rs  auto_number_import.rs  cloned_db_target.rs  cloned_xml_occurrence.rs  codegen_samples_survey.rs  collection_find_export.rs  concatenated_export.rs  connected_file_paths.rs  correlated_scalar_join.rs  csv_cloned_row_target.rs  csv_nested_instance.rs  database_xml_column.rs  datetime_add.rs  day_from_datetime.rs  db_null_predicates.rs  db_query_import.rs  db_relational_export.rs  db_relational_import.rs  db_substitute_null.rs  db_where_import.rs  dtd_post_group_filter.rs  dynamic_document_target.rs  dynamic_json_import.rs  dynamic_json_source.rs  dynamic_source_export.rs  dynamic_source_import.rs  dynamic_xml_variable_lookup.rs  edi_import.rs  edi_packaged_config.rs  edi_structural_projection.rs  edifact_datetime.rs  embedded_db_catalog.rs  exception_export.rs  exception_import.rs  explicit_text_entry.rs  explicit_text_export.rs  external_scalar_modules.rs  external_source_export.rs  (+89 more)
crates/web-demo/: Cargo.toml  index.html
crates/web-demo/src/: browser_download.rs  lib.rs  main.rs  project_document.rs  runtime.rs  workspace.rs
examples/codegen/rust/: Cargo.toml  README.md
(+623 files in other folders)
