[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/mapping",
    "crates/functions",
    "crates/engine",
    "crates/format-xml",
    "crates/format-json",
    "crates/format-csv",
    "crates/format-db",
    "crates/cli",
    "crates/gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/DeandreT/ferrule"

[workspace.dependencies]
core = { path = "crates/core" }
mapping = { path = "crates/mapping" }
functions = { path = "crates/functions" }
engine = { path = "crates/engine" }
format-xml = { path = "crates/format-xml" }
format-json = { path = "crates/format-json" }
format-csv = { path = "crates/format-csv" }
format-db = { path = "crates/format-db" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
