[workspace]
resolver = "3"
members = [
    "crates/ir",
    "crates/mapping",
    "crates/functions",
    "crates/engine",
    "crates/format-xml",
    "crates/format-json",
    "crates/format-csv",
    "crates/format-db",
    "crates/cli",
    "crates/gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/DeandreT/ferrule"

[workspace.dependencies]
ir = { path = "crates/ir" }
mapping = { path = "crates/mapping" }
functions = { path = "crates/functions" }
engine = { path = "crates/engine" }
format-xml = { path = "crates/format-xml" }
format-json = { path = "crates/format-json" }
format-csv = { path = "crates/format-csv" }
format-db = { path = "crates/format-db" }
cli = { path = "crates/cli" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
roxmltree = "0.21"
quick-xml = "0.41"
egui = "0.35"
eframe = "0.35"
egui-snarl = "0.11"
rusqlite = { version = "0.37", features = ["bundled"] }
