[workspace]
resolver = "3"
members = [
    "crates/ir",
    "crates/mapping",
    "crates/functions",
    "crates/engine",
    "crates/format-xml",
    "crates/format-json",
    "crates/format-csv",
    "crates/format-xlsx",
    "crates/format-db",
    "crates/format-edi",
    "crates/mfd",
    "crates/cli",
    "crates/gui",
    "crates/web-demo",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/DeandreT/ferrule"

[workspace.dependencies]
ir = { path = "crates/ir" }
mapping = { path = "crates/mapping" }
functions = { path = "crates/functions" }
engine = { path = "crates/engine" }
format-xml = { path = "crates/format-xml" }
format-json = { path = "crates/format-json" }
format-csv = { path = "crates/format-csv" }
format-xlsx = { path = "crates/format-xlsx" }
format-db = { path = "crates/format-db" }
format-edi = { path = "crates/format-edi" }
mfd = { path = "crates/mfd" }
cli = { path = "crates/cli" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
calamine = { version = "0.36", default-features = false }
rust_xlsxwriter = { version = "0.96", default-features = false }
roxmltree = "0.21"
quick-xml = "0.41"
egui = "0.35"
eframe = "0.35"
egui-snarl = "0.11"
rfd = "0.17"
rusqlite = { version = "0.37", features = ["bundled"] }
jiff = "0.2.32"
