[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless runner: executes a ferrule mapping project against input file(s) to produce output file(s)"

[[bin]]
name = "ferrule"
path = "src/main.rs"

[dependencies]
ir = { workspace = true }
mapping = { workspace = true }
engine = { workspace = true }
format-csv = { workspace = true }
format-xml = { workspace = true }
format-json = { workspace = true }
format-db = { workspace = true }
format-edi = { workspace = true }
mfd = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
