[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless runner: executes a ferrule mapping project against input file(s) to produce output file(s)"

[[bin]]
name = "ferrule"
path = "src/main.rs"

[features]
codegen-tests = []

[[test]]
name = "code_generation"
path = "tests/code_generation.rs"
required-features = ["codegen-tests"]

[dependencies]
ir = { workspace = true }
mapping = { workspace = true }
engine = { workspace = true }
codegen = { workspace = true }
codegen-rust = { workspace = true }
codegen-csharp = { workspace = true }
format-csv = { workspace = true }
format-xlsx = { workspace = true }
format-xml = { workspace = true }
format-json = { workspace = true }
format-db = { workspace = true }
format-edi = { workspace = true }
format-flextext = { workspace = true }
format-protobuf = { workspace = true }
format-pdf = { workspace = true }
format-xbrl = { workspace = true }
mfd = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
jiff = { workspace = true }
ureq = { workspace = true }

[target.'cfg(any(target_os = "android", target_os = "linux", target_os = "macos", target_os = "ios", target_os = "tvos", target_os = "visionos", target_os = "watchos", target_os = "redox"))'.dependencies]
rustix = { workspace = true }

[dev-dependencies]
rust_xlsxwriter = { workspace = true }
