[package]
name = "codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Backend-neutral lowering and generated artifact IR for ferrule mappings"

[dependencies]
engine = { workspace = true }
ir = { workspace = true }
mapping = { workspace = true }

