[package]
name = "format-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Database schema introspection and instance read/write"

[dependencies]
ir = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
