[package]
name = "format-json"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON Schema import and JSON instance read/write"

[dependencies]
ir = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
