[package]
name = "format-xbrl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bounded XBRL instance table projection"

[dependencies]
ir = { workspace = true }
mapping = { workspace = true }
roxmltree = { workspace = true }
quick-xml = { workspace = true }
thiserror = { workspace = true }
