[package]
name = "format-xlsx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "XLSX worksheet instance I/O for flat, transposed, composite, grid, and hierarchical mappings"

[dependencies]
ir = { workspace = true }
mapping = { workspace = true }
calamine = { workspace = true }
rust_xlsxwriter = { workspace = true }
thiserror = { workspace = true }
