[package]
name = "format-xml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "XSD-lite schema import and XML instance read/write"

[dependencies]
ir = { workspace = true }
roxmltree = { workspace = true }
quick-xml = { workspace = true }
thiserror = { workspace = true }
