[package]
name = "functions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in function library (string/math/date/aggregate/node-set) plus user-defined function hooks"

[dependencies]
ir = { workspace = true }
thiserror = { workspace = true }
