[package]
name = "functions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in function library (string/math/date/aggregate/node-set) plus user-defined function hooks"

[dependencies]
ir = { workspace = true }
format-flextext = { workspace = true }
mapping = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
