[package]
name = "gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Visual mapping editor: schema tree panes and a node-graph canvas for wiring connections"

[[bin]]
name = "ferrule-gui"
path = "src/main.rs"

[dependencies]
ir = { workspace = true }
mapping = { workspace = true }
cli = { workspace = true }
mfd = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
egui-snarl = { workspace = true }
rfd = { workspace = true }
