[package]
name = "ir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Schema-agnostic in-memory IR for ferrule: schema trees and data instance trees"

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
