[package]
name = "mfd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Imports and exports MapForce .mfd mapping designs (best-effort interop)"

[dependencies]
ir = { workspace = true }
mapping = { workspace = true }
format-xml = { workspace = true }
format-json = { workspace = true }
format-db = { workspace = true }
format-edi = { workspace = true }
format-protobuf = { workspace = true }
roxmltree = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
engine = { workspace = true }
format-csv = { workspace = true }
format-pdf = { workspace = true }
format-xlsx = { workspace = true }
format-flextext = { workspace = true }
format-xbrl = { workspace = true }
rusqlite = { workspace = true }
rust_xlsxwriter = { workspace = true }
